--- a/springboot-vue/pom.xml
+++ b/springboot-vue/pom.xml
@@ -9,7 +9,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.cl</groupId>
-    <artifactId>sprintboot-vue</artifactId>
+    <artifactId>springboot-vue</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>war</packaging>
     <name>springboot-vue</name>
